- divide Scene (MainScene, GameScene)
- update .gitignore (add settings for sublime text 2)

- GameCharacter.cs -> move character(w,a,s,d) and Character is chased camera

- MainSceneGUI.cs -> Add scene change button

- GameSceneGUI.cs -> Add button for mouse position check

--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,12 @@ Temp
 
 .DS_Store
 
+# Sublime Text 2 files
+*.sublime-settings
+*.sublime-project
+*.sublime-workspace
+
+
+# Garbage code
 *.bak
+*.cs~
